// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banana 1`] = `
SuffixTree {
  "index": Object {
    "a": Object {
      "$": Object {
        "BANANA": 1,
      },
      "n": Object {
        "a": Object {
          "$": Object {
            "BANANA": 1,
          },
          "n": Object {
            "a": Object {
              "$": Object {
                "BANANA": 1,
              },
            },
          },
        },
      },
    },
    "b": Object {
      "a": Object {
        "n": Object {
          "a": Object {
            "n": Object {
              "a": Object {
                "$": Object {
                  "BANANA": 1,
                },
              },
            },
          },
        },
      },
    },
    "n": Object {
      "a": Object {
        "$": Object {
          "BANANA": 1,
        },
        "n": Object {
          "a": Object {
            "$": Object {
              "BANANA": 1,
            },
          },
        },
      },
    },
  },
}
`;

exports[`Banana ban search 'nana ban' 1`] = `
Array [
  Object {
    "key": "BANANA",
    "score": 1,
  },
]
`;

exports[`Banana search nana 1`] = `
Object {
  "BANANA": 1,
}
`;

exports[`Multiple hits sharing phrases 1`] = `
Array [
  Object {
    "key": "wood",
    "score": 1,
  },
]
`;

exports[`i myra eller skogen 1`] = `
Array [
  Object {
    "key": "myr",
    "score": 1,
  },
  Object {
    "key": "skog",
    "score": 0.81,
  },
]
`;
